# hoyo-voice-extractor

./: .gitmodules  LICENSE  README.md  index.ts  package-lock.json  tools.ts  tsconfig.json
quickpck/: CMakeLists.txt  LICENSE  README.md  build.ps1
quickpck/src/: main.cpp
wwise/: CMakeLists.txt  README.md  build.sh
wwise/source/vgmstream/: COPYING
wwise/source/vgmstream/src/: vgmstream.c  vgmstream_init.c
wwise/source/vgmstream/src/base/: codec_info.c  decode.c  info.c  render.c  seek.c
wwise/source/vgmstream/src/coding/: coding_utils.c  vorbis_custom_decoder.c
wwise/src/: main.cpp
